--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ipop</title>
 </head>
 <body>
-    <H1>Hola mundo que tal todo</H1>
+    <H1>IPOP</H1>
+    <h2>Pruebas</h2>
 </body>
 </html>
