--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
     <title>IPOP Isidro Muñoz Luque</title>
 </head>
 
