--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <li>
                 <h3>Proyecto 1</h3>
                 <p>Este proyecto es de PHP en el cual se hace un login y varios formularios y tambien se utilizan cookies</p>
-                <img src="/login.png" alt="Proyecto 1">
-                <img src="/form.png" alt="Proyecto 1">
-                <img src="/resultado.png" alt="Proyecto 1">
-                <img src="/logOut.png" alt="Proyecto 1">
+                <img src="login.png" alt="Proyecto 1">
+                <img src="form.png" alt="Proyecto 1">
+                <img src="resultado.png" alt="Proyecto 1">
+                <img src="logOut.png" alt="Proyecto 1">
             </li>
                     
         </ul>
