--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
                     
         </ul>
     </section>
+        <section id="proyectosSegundo">
+        <ul>
+          <li>
+            <h3>Proyecto 2 ERP</h3>
+            <p>Este es un proyecto que trata sobre la creación de un ERP y la gestión del propio.</p>
+            <p>Y este es el link para poder acceder al Gitlab donde está el proyecto subido: </p>
+            <a href="https://gitlab.com/proyecto28805647/proyecto2/-/tree/main" target="_blank">Enlace al proyecto</a>
+          </li>
+        </ul>
+      </section>
 
     
 
