--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <p>BDD</p>
         <p>Hibernate</p>
         <p>SpringBoot</p>
+        <p>Kotlin</p>
     </section>
     <section id="proyectos">
         <h2>Proyectos Pasados</h2>
